# k64f-starter-template

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
fw-bootloader-secure/: CHANGELOG.md  CMakeLists.txt
fw-bootloader-secure/src/: custom_board.h  device_information.h  main.c  sdk_config.h
fw-sample/: CMakeLists.txt  CMakeListsEXAMPLE.cmake
fw-sample/armgcc/: build_release.sh
fw-sample/src/: custom_board.h  device_information.h  main.c  sdk_config.h
sdk_cmake/: armgcc.cmake  armgcc_force_cpp.cmake  configure_armgcc.cmake  configure_nordic_sdk.cmake  configure_nxp_sdk.cmake  configure_versions.cmake  xcc.cmake
sdk_k64f/: FRDM-K64F_manifest_v3_6.xml  SW-Content-Register.txt
sdk_nordic/components/libraries/bootloader/: nrf_bootloader.c
toolchain/: Dockerfile  env_compile.bat  env_compile.sh  env_setup.bat  env_setup.sh  env_start.bat  env_start.sh  linux_compile.sh  linux_install.sh
toolchain/files/: bashrc.sh  nRF-Command-Line-Tools_10_7_0_Linux-amd64.deb
toolchain/scripts/: env_compile.ps1  env_setup.ps1  env_start.ps1
toolchain/utils/: bash_utils.sh  linux_install_docker.sh
utils/keys/: make_keys.sh
utils/vscode/: c_cpp_properties.json  launch.json
vault/: sample.pem  sample_public.c
